# puppeteer_control

./: .gitignore  CMakeLists.txt  mainpage.dox  manifest.xml
data/: OptimalData.txt  TrajectoryData.txt  figure8.txt  figure8_small.txt  figure8_small_slow.txt  smallcircle.txt  temp.txt  test_traj_1.txt  test_traj_2.txt  test_traj_3.txt  traj_gen.py
include/: wiiuse.h
launch/: default_control.vcg  ekf_launcher.launch  ekf_no_winch.launch  max_4_robots.vcg  max_4_robots_sim.vcg  multi_launcher.launch  multi_nodelet.launch  multi_nodelet_sim.launch  old_wii.launch  single_robot_sim.launch  test.launch  wiimote_launcher.launch
src/: PuppeteerControlMain.original.c  closed_loop_control.py  kalman_kinematic_control.cpp  kinematic_controller.cpp  kinematic_controller_3D.cpp  multi_coordinator.cpp  multi_kalman_control.cpp  new_wii.cpp  position_control.cpp  puppeteercontrol.cpp  straight_driving.cpp  wiimote_control.cpp
